[package]
name = "obs-example-todomvc"
description = "TodoMVC HTTP service end-to-end with proto-first obs events."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "macros", "json", "query"] }
buffa = { workspace = true }
clap = { workspace = true }
http = { workspace = true }
obs-core = { workspace = true }
obs-sdk = { workspace = true }
obs-tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net"] }
tower = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
obs-build = { workspace = true }

[lints]
workspace = true
