[package]
name = "obs-example-tracing-migration"
description = "Migrate a tracing-only service to obs typed events without breaking existing logs."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
obs-core = { workspace = true }
obs-sdk = { workspace = true }
obs-tracing-bridge = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }

[lints]
workspace = true
